--- a/tasktracker/src/app/edit-task/edit-task.component.html
+++ b/tasktracker/src/app/edit-task/edit-task.component.html
@@ -1,3 +1,4 @@
+edit-task.component.html
 <!-- <mat-dialog-title id="editTask">{{data.title}}</mat-dialog-title> -->
 <h2 mat-dialog-title>Edit Task {{data.title}}</h2>
 <mat-dialog-content id="editTaskContent">
@@ -9,9 +10,16 @@
     <mat-label>Description</mat-label>
     <textarea matInput [(ngModel)]="data.description"></textarea>
   </mat-form-field>
+  <mat-form-field>
+    <mat-label>Assigned to</mat-label>
+    <textarea matInput [(ngModel)]="data.assignedTo"></textarea>
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Status</mat-label>
+    <textarea matInput [(ngModel)]="data.status"></textarea>
+  </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions id="editTaskActions">
   <button mat-button class="btn btn-primary" (click)="cancel()">Cancel</button>
   <button mat-button class="btn btn-primary" (click)="save()">Save</button>
 </mat-dialog-actions>
-
