--- a/tasktracker/src/app/task-list/task-list.component.html
+++ b/tasktracker/src/app/task-list/task-list.component.html
@@ -2,6 +2,7 @@
 <div *ngFor="let task of filtredTasks" class="task-item">
     <div class="task-name">{{ task.title }}</div>
     <div class="task-description">{{ task.description }}</div>
+    <div class="task-assignedTo">{{ task.assignedTo }}</div>
     <div class="task-status">{{ task.status }}</div>
     
     <div class="task-actions">
