--- a/tasktracker/src/app/add-task/add-task.component.html
+++ b/tasktracker/src/app/add-task/add-task.component.html
@@ -1,14 +1,12 @@
+add-task.component.html
 <form (ngSubmit)="onSubmit()">
   <div class="form-group">
+    <label for="taskId">Task Id</label>
+    <input type="text" id="taskId" name="taskId" [(ngModel)]="taskId" class="form-control" required />
     <label for="taskName">Task Name</label>
     <input type="text" id="taskName" name="taskName" [(ngModel)]="taskName" class="form-control" required />
     <label for="taskDescription">Description</label>
     <textarea id="taskDescription" name="taskDescription" [(ngModel)]="taskDescription" class="form-control" rows="4"></textarea>
-
-    <label for="taskStatus">Status</label>
-    <select id="taskStatus" name="taskStatus" [(ngModel)]="taskStatus" class="form-control" required>
-      <option [value]="status" *ngFor="let status of statusOptions">{{status}}</option>
-    </select>
 
     <label for="assignedTo">Assigned To</label>
     <input type="text" id="assignedTo" name="assignedTo" [(ngModel)]="assignedTo" class="form-control" />
