--- a/tasktracker/src/app/add-task/add-task.component.html
+++ b/tasktracker/src/app/add-task/add-task.component.html
@@ -1,15 +1,21 @@
-<form (ngSubmit)="onSubmit()">
+<form class="task-form" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <label for="taskId">Task Id</label>
     <input type="text" id="taskId" name="taskId" [(ngModel)]="taskId" class="form-control" required />
+  </div>
+  <div class="form-group">
     <label for="taskName">Task Name</label>
     <input type="text" id="taskName" name="taskName" [(ngModel)]="taskName" class="form-control" required />
+  </div>
+  <div class="form-group">
     <label for="taskDescription">Description</label>
     <textarea id="taskDescription" name="taskDescription" [(ngModel)]="taskDescription" class="form-control" rows="4"></textarea>
-
+  </div>
+  <div class="form-group">
     <label for="assignedTo">Assigned To</label>
     <input type="text" id="assignedTo" name="assignedTo" [(ngModel)]="assignedTo" class="form-control" />
-  
+  </div>
+  <div class="button-group">
     <button type="submit" class="btn btn-primary">Submit</button>
     <button type="button" class="btn btn-secondary" (click)="onCancel()">Cancel</button>
   </div>
